--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -1,29 +1,12 @@
-# https://www.mkdocs.org/user-guide/configuration/
-site_name: mkdocs debugging
-nav:
-  - Home: 'index.md'
-  - API:
-    - Functions: 'api/functions.md'
+site_name: Test Site
 theme:
-  name: readthedocs
-  highlightjs: true
-
-markdown_extensions:
-  - pymdownx.arithmatex
-  - pymdownx.superfences
-  - admonition
-  - toc:
-      permalink: true
-      separator: "_"
+  name: material
 
 plugins:
-  - markdown-exec:
-  - mkdocstrings: # https://mkdocstrings.github.io/python/usage/
-      handlers:
-        python:
-          options:
-            docstring_style: numpy
-            show_root_toc_entry: true  # Include the root object (e.g., module) in the ToC
-            show_root_heading: true    # Render a heading for the root object
-            heading_level: 2           # Set the starting heading level (e.g., h2)
-            
+  - search:
+      min_search_length: 2
+      indexing: 'full'
+  - markdown-exec
+
+markdown_extensions:
+  - pymdownx.superfences
